resources/assets/sass/app.scss
// @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";

/* PAGE SETTINGS */
body,
html {
    height: 100%;
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
}

* {
    box-sizing: border-box
}

.container-full {
  margin: 0 auto;
  width: 100%;
}
/* END PAGE SETTINGS */

/* COVERR FOREGROUND */

.video-title{
    display: table;
    position: absolute;
    z-index: 1000;
    top: 18%;
    width: 100%;
    text-align: center;
    color: #fff;
}

.margin-fix{
    margin-top: 0px;
}

#email{
    width: 330px;
}

.notification{
    margin-top: 15px;
    margin-right: 15%;
    margin-left: 15%;
}

// For smartphone
@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
    #email{
        display: inline-block;
        width: 220px;
    }

    #logo{
        width: 300px;
    }
}

// For smartphone landscape
@media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 720px)
  and (orientation: landscape) {
    #logo{
        width: 180px;
    }
}

// For tablets
@media only screen and (min-device-width : 480px) and (max-device-width : 1024px) {
    #email{
        display: inline-block;
    }
}

/* END COVERR FOREGROUND */

/* COVERR VIDEO */
.homepage-hero-module {
    border-right: none;
    border-left: none;
    position: relative;
}
.no-video .video-container video,
.touch .video-container video {
    display: none;
}
.no-video .video-container .poster,
.touch .video-container .poster {
    display: block !important;
}
.video-container {
    position: relative;
    bottom: 0%;
    left: 0%;
    height: 100%;
    width: 100%;
    overflow: hidden;
    background: #000;
}
.video-container .poster img {
    width: 100%;
    bottom: 0;
    position: absolute;
}
.video-container .filter {
    z-index: 100;
    position: absolute;
    background: rgba(0, 0, 0, 0.4);
    width: 100%;
}
.video-container video {
    position: absolute;
    z-index: 0;
    bottom: 0;
}
.video-container video.fillWidth {
    width: 100%;
}
.hidden{
	display: none;
}
/* END COVERR VIDEO */

